--- a/src/pages/pokemon/pokemon.scss
+++ b/src/pages/pokemon/pokemon.scss
@@ -1,3 +1,31 @@
 #pokemon_info_body {
   margin-top: 15px;
+  display: grid;
+  grid-template-columns: calc(50% - 15px) calc(50% - 15px);
+  grid-gap: 15px;
+
+  .info_container {
+    width: calc(100% - 20px);
+    padding: 10px 10px 20px 10px;
+    margin: auto auto 15px auto;
+    border-radius: 15px;
+    background-color: white;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  #basic_info_container {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    height: fit-content;
+    margin-top: 0;
+
+    #pokemon_name {
+      text-transform: capitalize;
+    }
+  }
+
+  #stats_chart_container {
+    min-height: 400px;
+  }
 }
