--- a/src/pages/pokemon/pokemon.scss
+++ b/src/pages/pokemon/pokemon.scss
@@ -28,4 +28,20 @@
   #stats_chart_container {
     min-height: 400px;
   }
+
+  %move_row_gridlayout {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    p {
+      margin: 0;
+    }
+  }
+  .move_row_hr {
+    @extend %move_row_gridlayout;
+    font-weight: bold;
+  }
+  .move_row {
+    @extend %move_row_gridlayout;
+  }
 }
