--- a/src/pages/pokemon/pokemon.scss
+++ b/src/pages/pokemon/pokemon.scss
@@ -45,3 +45,11 @@
     @extend %move_row_gridlayout;
   }
 }
+
+@media screen and (max-width: 700px) {
+  #pokemon_info_body {
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: 100%;
+  }
+}
